vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__attributes__tests__attribute_specification_with_signature.snap
---
source: vhdl_syntax/src/parser/productions/attributes.rs
expression: "to_test_text(Parser::attribute_specification,\n\"attribute attr_name of foo[return natural] : function is 0+1;\",)"
---
AttributeSpecification
  Keyword(Attribute)
  Identifier 'attr_name'
  Keyword(Of)
  EntitySpecification
    EntityDesignatorList
      EntityDesignator
        Identifier 'foo'
        Signature
          LeftSquare
          ReturnType
            Keyword(Return)
            Name
              NameDesignatorPrefix
                Identifier 'natural'
          RightSquare
    Colon
    Keyword(Function)
  Keyword(Is)
  BinaryExpression
    LiteralExpression
      AbstractLiteral '0'
    Plus
    LiteralExpression
      AbstractLiteral '1'
  SemiColon
