vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__attributes__tests__parse_simple_attribute_declaration.snap
---
source: vhdl_syntax/src/parser/productions/attributes.rs
expression: "to_test_text(Parser::attribute_declaration, \"attribute foo : lib.name;\")"
---
AttributeDeclaration
  Keyword(Attribute)
  Identifier 'foo'
  Colon
  Name
    NameDesignatorPrefix
      Identifier 'lib'
    SelectedName
      Dot
      Identifier 'name'
  SemiColon
